# CUDA_CXX_TEMPLATE

./: CMakeLists.txt  README.md
cuda/: cuda_process.cu
include/: cuda_process.h
src/: main.cpp
